Try to fix Author hover cutoff & update packages.

--- a/themes/shoka/source/css/_common/outline/sidebar/author.styl
+++ b/themes/shoka/source/css/_common/outline/sidebar/author.styl
@@ -4,6 +4,10 @@
     @extend .shake;
   }
 
+  element.style {
+    padding-top: 25px;
+  }
+
   .image {
     border: .0625rem solid var(--body-bg-shadow);
     display: block;
